examples/errors/fun_redefinition.xpln
fun foo(a)
    return a;
endf;

fun foo(a)
    return a + a;
endf;

fun foo(a)
    return a + a + a;
endf;

z := foo(1);
output z;
return 0;
